# poc-agents-league-techconnect-2026

./: .gitignore  PLAN-finetune-and-testing.md  README-zhtw.md  README.md  console_app.py  pyproject.toml  requirements.txt  tech-summary-zhtw.md  tech-summary.md
.github/skills/demo1-fabric-inventory/: SKILL.md
.github/skills/demo2-sharepoint-km/: SKILL.md
.github/skills/demo3-github-bugfix/: SKILL.md
.github/skills/demo4-bing-weather/: SKILL.md
.github/skills/demo5-logistics/: SKILL.md
.github/skills/demo6-azure-health/: SKILL.md
.github/skills/demo7-incident-report/: SKILL.md
.github/skills/demo8-meeting-booking/: SKILL.md
.github/workflows/: test.yml
config/: agent.json  mcp_server.json
data/customer-complaints/: jp_complaints_jan25.json  tw_complaints_jan25.json  us_complaints_jan25.json
data/inventory/: jp_supplier_inventory.csv  tw_supplier_inventory.csv  us_supplier_inventory.csv
data/sharepoint-km/: common-issues-faq.md  inventory-troubleshoot.md  supplier-sync-guide.md
ref/: 00_env_check.py  01_inventory_agent_sample.py  01_iq_agent.py  agent-skills-plan.md  agent_utils.py  all-demo-plan.md  readme-modify-plan.md  requirements.txt
src/: agents.py  exceptions.py  inventory_data.py  prompts.py  router.py  skills.py  tools.py
tests/: __init__.py  conftest.py  test_agents.py  test_foundry_agent.py  test_integration.py  test_mcp.py  test_router.py  test_skills.py  test_tools.py
